src/native/ui/imgui_ffi.h

///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

typedef struct PDVec2 {
    float x, y;
} PDVec2;
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

 void imgui_begin_child(const char* stringId, PDVec2 size, bool border, int extraFlags);
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

 void imgui_end_child();
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

 void imgui_separator();
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

 bool imgui_combo3(const char* label, int* currentItem, bool (*itemsGetter)(void* data, int idx, const char** out_text), void* data, int itemsCount, int heightInItems);
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

 bool imgui_list_box2(const char* label, int* currentItem, bool (*itemsGetter)(void* data, int idx, const char** out_text), void* data, int itemsCount, int heightInItems);